tests/invalid_mutually_recursive_record_depth_4.tig
let
    type A = {field : int}
in
    let
        type B = {field : A}
        var a:= 1
        type A = {field : C}//error
        function b(field : int) : int = 1
        type C = G
        type G = {field : H}//error
        var c:= 2
        type H = B
    in
    end
end
